frontend/test/should_pass/edge_015.grg
using edge_model_006;
