frontend/test/should_fail/computations_no_proc_method2.grg
using computations_no_proc_method2;
